--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,9 +99,15 @@ ul {
 	/* width: 100%; */
 	border: 1px solid #ccc;
 	margin-right: 10px;
-	padding: 15px;
+	padding: 7px 15px;
 }
 
 #result {
 	width: 650px;
+}
+
+.label {
+	display: inline-block;
+	width: 100px;
+	text-align: right;
 }
